WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
246847
Fix clang build warning in WebSocketTaskCurl
https://bugs.webkit.org/show_bug.cgi?id=246847
Summary
Fix clang build warning in WebSocketTaskCurl
Kenji Shukuwa
Reported
2022-10-21 00:04:20 PDT
D:\WebKit\Source\WebKit\NetworkProcess\curl\WebSocketTaskCurl.cpp(158,17): warning: enumeration values 'OpCodeContinuation', 'OpCodePong', and 'OpCodeInvalid' not handled in switch [-Wswitch] switch (opCode) { ^~~~~~ 1 warning generated.
Attachments
Add attachment
proposed patch, testcase, etc.
Kenji Shukuwa
Comment 1
2022-10-23 19:02:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5693
EWS
Comment 2
2022-10-23 20:17:19 PDT
Committed
255904@main
(f10eb9211cd8): <
https://commits.webkit.org/255904@main
> Reviewed commits have been landed. Closing PR #5693 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-10-23 20:18:17 PDT
<
rdar://problem/101484392
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug