Fix clang build warning in WebSocketTaskCurl https://bugs.webkit.org/show_bug.cgi?id=246847

Reviewed by Fujii Hironori.

A warning 'not handled in switch' is detected in WebSocketTask::didReceiveData()
due to 'OpCodeContinuation', 'OpCodePong' and 'OpCodeInvalid'. To solve the warning,
add those enum definitions.

* Source/WebKit/NetworkProcess/curl/WebSocketTaskCurl.cpp:
(WebKit::WebSocketTask::didReceiveData):

Canonical link: https://commits.webkit.org/255904@main